cosmos/clusters/prod/apps/personal-blog/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-blog
---
apiVersion: v1
kind: Service
metadata:
  namespace: personal-blog
  name: personal-blog
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 3000
  selector:
    app: personal-blog
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: personal-blog
  name: personal-blog
  labels:
    app: personal-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-blog
  template:
    metadata:
      labels:
        app: personal-blog
    spec:
      containers:
        - name: blog
          image: ghcr.io/incognito124/personal-blog-frontend:1767735815 # {"$imagepolicy": "flux-system:incognito124-personal-blog-frontend-policy"}
          ports:
            - name: web
              containerPort: 3000
        - name: blog-db
          image: ghcr.io/incognito124/personal-blog-database:1767733870 # {"$imagepolicy": "flux-system:incognito124-personal-blog-database-policy"}
          ports:
            - name: web
              containerPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: personal-blog
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`terra-incognita.blog`)
      kind: Rule
      services:
        - name: personal-blog
          port: 80
  tls:
    certResolver: letsencrypt
